Opened 13 years ago

Closed 12 years ago

#8562 closed bug (fixed)

[Deskbar] preferences, in some locales Menu group width is not in line with other groups

Reported by: diver Owned by: jscipione
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Attachments (3)

deskbar.png (29.3 KB ) - added by diver 13 years ago.
deskbar_prefs.png (25.2 KB ) - added by diver 12 years ago.
Deskbar_prefs_russian_fixed.png (30.0 KB ) - added by jscipione 12 years ago.

Download all attachments as: .zip

Change History (11)

by diver, 13 years ago

Attachment: deskbar.png added

comment:1 by diver, 13 years ago

Summary: [Deskbar] preferences, in some locales Menu group width is not in line with Application group[Deskbar] preferences, in some locales Menu group width is not in line with other groups

comment:2 by jscipione, 12 years ago

Is this still a problem since the Preferences window was converted to use a BTabView?

comment:3 by diver, 12 years ago

Resolution: fixed
Status: newclosed

Nope :-)

comment:4 by jscipione, 12 years ago

Fixed in hrev45155 for posterity.

comment:5 by diver, 12 years ago

Resolution: fixed
Status: closedreopened

It's back in hrev45368.

comment:6 by diver, 12 years ago

Owner: changed from axeld to jscipione
Status: reopenedassigned

Could you also move Auto-hide option below Auto-raise, so that localized window wasn't that wide.

New layout looks much better (at least in English for now), more in line with other applets.

by diver, 12 years ago

Attachment: deskbar_prefs.png added

by jscipione, 12 years ago

comment:7 by jscipione, 12 years ago

Fixed in hrev45371

comment:8 by jscipione, 12 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev45371

Note: See TracTickets for help on using tickets.