Deskbar prefs i18n updates. Fixes #8562

* AddGlue() to the Menu box to make it expand with wider translations.
* Order checkboxes vertically to better accomidate wider translations.